# spitalert

./: .cursorrules  .env.example  .gitignore  Dockerfile  HOSPITAL_SICILY_LIST.md  README.md  database.py  main.py  pyproject.toml  render.yaml  requirements.txt  scheduler.py  scraper.py  test_scraper.py
app/: cli.py  config.py  database.py  hospital_codes.py  init_hospitals.py  main.py  models.py  scheduler.py  schemas.py
app/core/: logging.py
app/routers/: api.py  hospitals.py  scraper.py
app/scrapers/: README.md  __init__.py  ao_papardo.py  arnas_civico.py  asp_agrigento.py  asp_caltanissetta.py  asp_messina.py  asp_palermo.py  base.py  factory.py  hospital_codes.py  ospedali_riuniti_palermo.py  policlinico_catania.py  policlinico_messina.py  policlinico_palermo.py
app/scrapers/examples/: __init__.py  ospedali_riuniti_palermo.py  san_raffaele.py
app/scripts/: init_hospitals.py
app/services/: scraper_service.py
app/utils/: http.py  parsing.py  rate_limiter.py
scrapers/: __init__.py  asp_agrigento.py  asp_caltanissetta.py  asp_palermo.py  base_scraper.py  civico.py  policlinico.py  villa_sofia_cervello.py
scripts/: start.sh
